--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 html{
+  height:100%;
   font-size: 14px;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 body{
+  height:100%;
   background-color: #efeff4;
+  position: relative;
 }
 div,li,p,ul,table,span,a{
   margin: 0;
